Fixed broken alignment on editor
Fixed broken center alignment on Gutenberg editor.

--- a/style-editor.css
+++ b/style-editor.css
@@ -1,13 +1,12 @@
-/* 
+/*
  * Main column width
  * This changes it from the default 580px to 720px
  */
 .wp-block {
     max-width: 900px;
-    margin: 32px auto;
 }
 
-/* 
+/*
  * Width of "wide" blocks
  * This changes it from the default 1080px to 1280px
  */
@@ -15,7 +14,7 @@
     max-width: 1280px;
 }
 
-/* 
+/*
  * Width of "full" blocks
  */
 .wp-block[data-align="full"] {
